changed directory name

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -11,7 +11,7 @@ h1{
 }
 
 body{
-  background: url("IMG_0045.JPG");
+  background: url("IMG_1504_Fotor.jpg");
   background-size:cover;
   background-position: center;
   background-attachment: fixed;
@@ -20,13 +20,13 @@ body{
 .container {
   width: 500px;
   margin: 100px auto;
-  padding: 10px;
+  padding: 30px;
   background: grey;
   background-color: rgba(0,0,0,0.6);
-  border-radius: 35px;
+  border-radius: 50px;
   text-align: center;
   align-content: center;
-  color: black;
+  color: yellow;
 }
 
 .image{
