updating the page style

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -11,7 +11,7 @@ h1{
 }
 
 body{
-  background: url("IMG_1504_Fotor.jpg");
+  background: url("IMG_8790.jpg");
   background-size:cover;
   background-position: center;
   background-attachment: fixed;
