fixing styling and adding more details

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -5,9 +5,8 @@
 
 h1{
   font-family: 'Questrial', sans-serif;
-  font-size: 50px;
+  font-size: 52px;
   color: white;
-
 }
 
 body{
@@ -25,8 +24,12 @@ body{
   background-color: rgba(0,0,0,0.6);
   border-radius: 50px;
   text-align: center;
+  font-size: 17px;
+  font-family: Cabin, sans-serif;
+  font-style: normal;
+  color: #DDDDDD;
   align-content: center;
-  color: yellow;
+
 }
 
 .image{
