--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin');
 @import url('https://fonts.googleapis.com/css?family=Questrial');
 
-
 h1{
   font-family: 'Questrial', sans-serif;
   font-size: 52px;
@@ -12,8 +11,17 @@ h1{
 body{
   background: url("IMG_8790.jpg");
   background-size:cover;
-  background-position: center;
+  background-position: center center;
+  background-repeat: no-repeat;
   background-attachment: fixed;
+    
+    @media only screen and (max-width: 770px){
+      background: url("IMG_8790.jpg");
+      background-size:cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
 }
 
 .container {
