--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -2,29 +2,25 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin');
 @import url('https://fonts.googleapis.com/css?family=Questrial');
 
+@media screen and (max-width: 479px){
+  .container{
+    width: 320px;
+    height: inherit;
+  }
+}
 
-
-h1{
+h1 {
   font-family: 'Questrial', sans-serif;
   font-size: 52px;
   color: white;
 }
 
-body{
+body {
   background: url("IMG_8790.jpg");
-  background-size:cover;
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-  body{
-    background: url("IMG_8790.jpg");
-    background-size:cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-  }
 }
 
 .container {
@@ -41,32 +37,15 @@ body{
   color: #DDDDDD;
   align-content: center;
 }
-  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    .container {
-      width: 500px;
-      margin: 100px auto;
-      padding: 30px;
-      background: grey;
-      background-color: rgba(0,0,0,0.6);
-      border-radius: 50px;
-      text-align: center;
-      font-size: 17px;
-      font-family: Cabin, sans-serif;
-      font-style: normal;
-      color: #DDDDDD;
-      align-content: center;
-    }
-    
-}
 
-.image{
+.image {
   margin-left: -100px;
   margin-top: -50px;
   align-content: center;
   text-align: center;
 }
 
-.social{
+.social {
   margin-bottom: 20px;
   margin-left: auto;
   padding-right: 30px;
