--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
-<meta name=”viewport” content=”width=device-width, initial-scale=1">
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width" initial-scale="1" charset="UTF-8"/>
     <title>Portfolio</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
