--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -49,8 +49,8 @@ body {
 @media only screen and (max-width: 479px) {
   .container {
     width: 500px;
-    height: 94vh;
-    margin-left: 10px;
+    height: 90vh;
+    margin-left: 10vh;
     background: grey;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 50px;
@@ -63,15 +63,14 @@ body {
   }
 
   body {
-    display: flex;
     background: url("IMG_8790.jpg");
-    background-size: cover;
+    background-size: auto;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
 
   p {
-    font-size: 20px;
+    font-size: 22px;
   }
 }
