--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -64,10 +64,10 @@ body {
 
   body {
     background: url("IMG_8790.jpg");
-    background-size: auto;
-    background-position: center center;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: inherit;
   }
 
   p {
