there we go again

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -65,9 +65,9 @@ body {
   body {
     background: url("IMG_8790.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: inherit;
+    height: 150vh;
   }
 
   p {
