reducing the background photo size

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       Code Academy Course Facilitator</p>
     <div class="image">
       <p>
-        <img src="https://preview.ibb.co/dhFNN6/Oxfam_LE_Ghada_I_pptx.png" alt="@ibraghada">
+        <img src="http://preview.ibb.co/n3bgcG/Oxfam_LE_Ghada_I_pptx_2.png" alt="@ibraghada">
       </p>
     </div>
     <div class="social">
