reducing the background photo size

--- a/app/assets/stylesheets/bootstrap_and_customisation.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customisation.css.scss
@@ -9,7 +9,7 @@ h1 {
 }
 
 body {
-  background: url("IMG_8790.jpg");
+  background: url("IMG_8844_1.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
